styles/products_index.scss
main.all-listings {
  // Featured Section
  section.featured {
    padding: 1em 1em 0px 1em;
    width: 100%;
    display: flex;
    justify-content: space-around;
    column-gap: 1em;
    border: 2px solid black;
    flex-wrap: wrap;

    article.featured-listing {
      display: flex;
      flex-direction: column;
      align-items: center;
      text-align: center;
      border: 2px solid black;
      margin-bottom: 1em;

      img {
        max-width: 150px;
      }

      a {
        padding: 0em 0.5em;
      }
    }
  }

  // Favourite and sort buttons
  div.sorting-buttons {
    display: flex;
    justify-content: right;
    margin: 5px 0em;

    button {
      height: 2em;
      margin-left: 1em;
      font-size: 0.75em;
      background-color: transparent;
      border-radius: 5px;
    }
  }

  // All listings
  article.listing {
    padding: 1em;
    border: 2px solid black;
    height: auto;
    max-width: 50vw;
    margin: 0 auto;
    display: flex;
    justify-content: flex-start;
    flex-direction: column;
    margin-bottom: 1em;

    img.listing-img {
      max-height: 100%;
      max-width: 100%;
      align-self: center;
    }

    div.listing-details {
      display: flex;
      text-align: left;
      flex-direction: column;
      padding: 1em 0 0 0;

      p {
        margin-top: 0.5em;
        width: 100%;
        text-align: left;
      }
    }
  }

  a {
    font-weight: bold;
  }

  .price {
    color: #41ac6c !important;
  }

  @media (min-width: 720px) {
    // All listings
    article.listing {
      flex-direction: row;
      height: 300px;

      img.listing-img {
        max-height: 100%;
        max-width: 100%;
        align-self: left;
      }
      div.listing-details {
        padding: 0 0 0 1em;
      }
    }
  }
}

